--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://igordinuzzi.github.io/budget-management-system-react",
+  "homepage": "https://bkanishka004.github.io/SmartSpend",
   "name": "budget-management-system",
   "version": "0.1.0",
   "private": true,
